Quitar internalizacion y demas cambios

--- a/pages/politica-privacidad.html
+++ b/pages/politica-privacidad.html
@@ -188,14 +188,14 @@
 
     <div class="terms-container">
         <div class="terms-header">
-            <h1 data-i18n="privacy.title">Política de Privacidad</h1>
-            <p data-i18n="privacy.last-updated">Última actualización: Diciembre 2024</p>
+            <h1>Política de Privacidad</h1>
+            <p>Última actualización: Diciembre 2024</p>
         </div>
 
         <div class="terms-content">
             <section class="terms-section">
-                <h2 data-i18n="privacy.introduction.title">1. Introducción</h2>
-                <p data-i18n="privacy.introduction.content">Bienvenido a Inker, la plataforma líder que conecta artistas de tatuajes con clientes. Esta Política de Privacidad explica cómo recopilamos, utilizamos, divulgamos y protegemos su información cuando visita nuestro sitio web o utiliza nuestros servicios. Por favor, lea esta política de privacidad cuidadosamente. Si no está de acuerdo con los términos de esta política de privacidad, no acceda al sitio.</p>
+                <h2>1. Introducción</h2>
+                <p>Bienvenido a Inker, la plataforma líder que conecta artistas de tatuajes con clientes. Esta Política de Privacidad explica cómo recopilamos, utilizamos, divulgamos y protegemos su información cuando visita nuestro sitio web o utiliza nuestros servicios. Por favor, lea esta política de privacidad cuidadosamente. Si no está de acuerdo con los términos de esta política de privacidad, no acceda al sitio.</p>
             </section>
 
             <section class="terms-section">
