--- a/pages/reset-password-confirm.html
+++ b/pages/reset-password-confirm.html
@@ -93,7 +93,7 @@
                 <a href="pages/privacy-policy.html" data-footer="privacy">Privacy Policy</a>
             </div>
             <div class="footer-center">
-                <p data-footer="copyright">&copy; 2025 Inker. All rights reserved.</p>
+                <p>&copy; 2025 Inker. Todos los derechos reservados.</p>
             </div>
             <div class="footer-right">
                 <div class="social-icons">
@@ -117,7 +117,6 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     
     <script src="../js/config.js"></script>
-    <script src="../js/i18n.js"></script>
     <script src="../js/notifications.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/reset-password.js"></script>
