--- a/pages/terms-conditions.html
+++ b/pages/terms-conditions.html
@@ -177,14 +177,14 @@
 
     <div class="terms-container">
         <div class="terms-header">
-            <h1 data-i18n="terms.title">Terms and Conditions</h1>
-            <p data-i18n="terms.subtitle">Please read these terms and conditions carefully before using our platform</p>
+            <h1>Términos y Condiciones</h1>
+            <p>Por favor, lee estos términos y condiciones cuidadosamente antes de usar nuestra plataforma</p>
         </div>
 
         <div class="terms-content">
             <div class="terms-section">
-                <h2 data-i18n="terms.section1-title">1. Acceptance of Terms</h2>
-                <p data-i18n="terms.section1-content">By accessing and using Inker, you accept and agree to be bound by the terms and provision of this agreement. If you do not agree to abide by the above, please do not use this service.</p>
+                <h2>1. Aceptación de Términos</h2>
+                <p>Al acceder y usar Inker, aceptas y te comprometes a cumplir con los términos y disposiciones de este acuerdo. Si no estás de acuerdo con lo anterior, por favor no uses este servicio.</p>
             </div>
 
             <div class="terms-section">
