--- a/pages/find-styles.html
+++ b/pages/find-styles.html
@@ -31,7 +31,7 @@
     <!-- Search and Filter Section -->
     <section class="search-section">
         <div class="container">
-            <h1 data-nav="discover-styles-title">Discover Tattoo Styles</h1>
+            <h1 data-nav="discover-styles-title">Descubre tu <br><span class="gradient-text">estilo perfecto</span></h1>
             <p data-nav="discover-styles-subtitle">Explore different artistic styles and find the perfect match for your next tattoo</p>
             
             <div class="search-filters">
@@ -86,7 +86,6 @@
     <script src="../js/email-config.js"></script>
     <script src="../js/find-styles.js"></script>
     <script src="../js/contact-widget.js"></script>
-    <script src="../js/i18n.js"></script>
     <script src="../js/cookie-consent.js"></script>
     <script src="../js/global-cookie-banner.js"></script>
     <script src="../js/header-manager.js"></script>
