Cambios index y estilos

--- a/pages/find-styles.html
+++ b/pages/find-styles.html
@@ -32,12 +32,12 @@
     <section class="search-section">
         <div class="container">
             <h1 data-nav="discover-styles-title">Descubre tu <br><span class="gradient-text">estilo perfecto</span></h1>
-            <p data-nav="discover-styles-subtitle">Explore different artistic styles and find the perfect match for your next tattoo</p>
+            <p data-nav="discover-styles-subtitle">Explora diferentes estilos artísticos y encuentra la combinación perfecta para tu próximo tatuaje</p>
             
             <div class="search-filters">
                 <div class="search-bar">
-                    <input type="text" id="styleSearch" placeholder="Search styles, techniques, or characteristics..." data-nav="search-styles-placeholder">
-                    <button class="search-btn" onclick="searchStyles()" data-nav="search-btn">Search</button>
+                    <input type="text" id="styleSearch" placeholder="Buscar estilos, técnicas o características..." data-nav="search-styles-placeholder">
+                    <button class="search-btn" onclick="searchStyles()" data-nav="search-btn">Buscar</button>
                 </div>
             </div>
         </div>
