Cambios colores en paginas de tatuadores, perfil, login, registro y politicas

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -177,110 +177,110 @@
 
     <div class="terms-container">
         <div class="terms-header">
-            <h1 data-i18n="privacy.title">Privacy Policy</h1>
-            <p data-i18n="privacy.last-updated">Last updated: December 2024</p>
+            <h1>Política de Privacidad</h1>
+            <p>Última actualización: Diciembre 2024</p>
         </div>
 
         <div class="terms-content">
             <section class="terms-section">
-                <h2 data-i18n="privacy.introduction.title">1. Introduction</h2>
-                <p data-i18n="privacy.introduction.content">Welcome to Inker, the premier platform connecting tattoo artists with clients. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or use our services. Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access the site.</p>
+                <h2>1. Introducción</h2>
+                <p>Bienvenido a Inker, la plataforma principal que conecta a tatuadores con clientes. Esta Política de Privacidad explica cómo recopilamos, utilizamos, divulgamos y protegemos su información cuando visita nuestro sitio web o utiliza nuestros servicios. Por favor, lea esta política de privacidad cuidadosamente. Si no está de acuerdo con los términos de esta política de privacidad, no acceda al sitio.</p>
             </section>
 
             <section class="terms-section">
-                <h2 data-i18n="privacy.information-collection.title">2. Information We Collect</h2>
+                <h2>2. Información que Recopilamos</h2>
                 
-                <h3 data-i18n="privacy.information-collection.personal.title">Personal Information</h3>
-                <p data-i18n="privacy.information-collection.personal.content">We may collect personal information that you voluntarily provide to us when you register for an account, create a profile, or use our services, including:</p>
+                <h3>Información Personal</h3>
+                <p>Podemos recopilar información personal que usted nos proporciona voluntariamente cuando se registra para una cuenta, crea un perfil o utiliza nuestros servicios, incluyendo:</p>
                 <ul>
-                    <li data-i18n="privacy.information-collection.personal.name">Name and contact information</li>
-                    <li data-i18n="privacy.information-collection.personal.email">Email address</li>
-                    <li data-i18n="privacy.information-collection.personal.phone">Phone number</li>
-                    <li data-i18n="privacy.information-collection.personal.location">Location information</li>
-                    <li data-i18n="privacy.information-collection.personal.profile">Profile information and preferences</li>
-                    <li data-i18n="privacy.information-collection.personal.portfolio">Portfolio images and descriptions</li>
+                    <li>Nombre e información de contacto</li>
+                    <li>Dirección de correo electrónico</li>
+                    <li>Número de teléfono</li>
+                    <li>Información de ubicación</li>
+                    <li>Información del perfil y preferencias</li>
+                    <li>Imágenes del portafolio y descripciones</li>
                 </ul>
 
-                <h3 data-i18n="privacy.information-collection.automatic.title">Automatically Collected Information</h3>
-                <p data-i18n="privacy.information-collection.automatic.content">We automatically collect certain information when you visit our website, including:</p>
+                <h3>Información Recopilada Automáticamente</h3>
+                <p>Recopilamos automáticamente cierta información cuando visita nuestro sitio web, incluyendo:</p>
                 <ul>
-                    <li data-i18n="privacy.information-collection.automatic.ip">IP address and device information</li>
-                    <li data-i18n="privacy.information-collection.automatic.browser">Browser type and version</li>
-                    <li data-i18n="privacy.information-collection.automatic.pages">Pages visited and time spent</li>
-                    <li data-i18n="privacy.information-collection.automatic.referrer">Referring website</li>
-                    <li data-i18n="privacy.information-collection.automatic.cookies">Cookies and similar tracking technologies</li>
-                </ul>
-            </section>
-
-            <section class="terms-section">
-                <h2 data-i18n="privacy.information-use.title">3. How We Use Your Information</h2>
-                <p data-i18n="privacy.information-use.content">We use the information we collect to:</p>
-                <ul>
-                    <li data-i18n="privacy.information-use.provide">Provide, operate, and maintain our services</li>
-                    <li data-i18n="privacy.information-use.communicate">Communicate with you about our services</li>
-                    <li data-i18n="privacy.information-use.personalize">Personalize your experience and content</li>
-                    <li data-i18n="privacy.information-use.analytics">Analyze usage patterns and improve our services</li>
-                    <li data-i18n="privacy.information-use.marketing">Send marketing communications (with your consent)</li>
-                    <li data-i18n="privacy.information-use.legal">Comply with legal obligations</li>
+                    <li>Dirección IP e información del dispositivo</li>
+                    <li>Tipo y versión del navegador</li>
+                    <li>Páginas visitadas y tiempo invertido</li>
+                    <li>Sitio web de referencia</li>
+                    <li>Cookies y tecnologías de seguimiento similares</li>
                 </ul>
             </section>
 
             <section class="terms-section">
-                <h2 data-i18n="privacy.information-sharing.title">4. Information Sharing and Disclosure</h2>
-                <p data-i18n="privacy.information-sharing.content">We do not sell, trade, or otherwise transfer your personal information to third parties without your consent, except in the following circumstances:</p>
+                <h2>3. Cómo Utilizamos Su Información</h2>
+                <p>Utilizamos la información que recopilamos para:</p>
                 <ul>
-                    <li data-i18n="privacy.information-sharing.service">With service providers who assist us in operating our website</li>
-                    <li data-i18n="privacy.information-sharing.legal">When required by law or to protect our rights</li>
-                    <li data-i18n="privacy.information-sharing.business">In connection with a business transfer or merger</li>
-                    <li data-i18n="privacy.information-sharing.consent">With your explicit consent</li>
+                    <li>Proporcionar, operar y mantener nuestros servicios</li>
+                    <li>Comunicarnos con usted sobre nuestros servicios</li>
+                    <li>Personalizar su experiencia y contenido</li>
+                    <li>Analizar patrones de uso y mejorar nuestros servicios</li>
+                    <li>Enviar comunicaciones de marketing (con su consentimiento)</li>
+                    <li>Cumplir con obligaciones legales</li>
                 </ul>
             </section>
 
             <section class="terms-section">
-                <h2 data-i18n="privacy.data-security.title">5. Data Security</h2>
-                <p data-i18n="privacy.data-security.content">We implement appropriate technical and organizational security measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the internet or electronic storage is 100% secure.</p>
-            </section>
-
-            <section class="terms-section">
-                <h2 data-i18n="privacy.cookies.title">6. Cookies and Tracking Technologies</h2>
-                <p data-i18n="privacy.cookies.content">We use cookies and similar tracking technologies to enhance your browsing experience, analyze site traffic, and personalize content. You can control cookie settings through your browser preferences or our cookie consent banner.</p>
-            </section>
-
-            <section class="terms-section">
-                <h2 data-i18n="privacy.user-rights.title">7. Your Rights</h2>
-                <p data-i18n="privacy.user-rights.content">Depending on your location, you may have the following rights regarding your personal information:</p>
+                <h2>4. Compartir y Divulgación de Información</h2>
+                <p>No vendemos, intercambiamos ni transferimos su información personal a terceros sin su consentimiento, excepto en las siguientes circunstancias:</p>
                 <ul>
-                    <li data-i18n="privacy.user-rights.access">Right to access your personal information</li>
-                    <li data-i18n="privacy.user-rights.rectify">Right to rectify inaccurate information</li>
-                    <li data-i18n="privacy.user-rights.erase">Right to erase your personal information</li>
-                    <li data-i18n="privacy.user-rights.portability">Right to data portability</li>
-                    <li data-i18n="privacy.user-rights.object">Right to object to processing</li>
-                    <li data-i18n="privacy.user-rights.withdraw">Right to withdraw consent</li>
+                    <li>Con proveedores de servicios que nos ayudan a operar nuestro sitio web</li>
+                    <li>Cuando sea requerido por ley o para proteger nuestros derechos</li>
+                    <li>En relación con una transferencia comercial o fusión</li>
+                    <li>Con su consentimiento explícito</li>
                 </ul>
             </section>
 
             <section class="terms-section">
-                <h2 data-i18n="privacy.data-retention.title">8. Data Retention</h2>
-                <p data-i18n="privacy.data-retention.content">We retain your personal information only for as long as necessary to fulfill the purposes outlined in this privacy policy, unless a longer retention period is required or permitted by law.</p>
+                <h2>5. Seguridad de los Datos</h2>
+                <p>Implementamos medidas de seguridad técnicas y organizativas apropiadas para proteger su información personal contra acceso no autorizado, alteración, divulgación o destrucción. Sin embargo, ningún método de transmisión por internet o almacenamiento electrónico es 100% seguro.</p>
             </section>
 
             <section class="terms-section">
-                <h2 data-i18n="privacy.children.title">9. Children's Privacy</h2>
-                <p data-i18n="privacy.children.content">Our services are not intended for children under 13 years of age. We do not knowingly collect personal information from children under 13. If you are a parent or guardian and believe your child has provided us with personal information, please contact us.</p>
+                <h2>6. Cookies y Tecnologías de Seguimiento</h2>
+                <p>Utilizamos cookies y tecnologías de seguimiento similares para mejorar su experiencia de navegación, analizar el tráfico del sitio y personalizar el contenido. Puede controlar la configuración de cookies a través de las preferencias de su navegador o nuestro banner de consentimiento de cookies.</p>
             </section>
 
             <section class="terms-section">
-                <h2 data-i18n="privacy.changes.title">10. Changes to This Privacy Policy</h2>
-                <p data-i18n="privacy.changes.content">We may update this privacy policy from time to time. We will notify you of any changes by posting the new privacy policy on this page and updating the "Last updated" date. Your continued use of our services after any modifications constitutes acceptance of the updated privacy policy.</p>
+                <h2>7. Sus Derechos</h2>
+                <p>Dependiendo de su ubicación, puede tener los siguientes derechos con respecto a su información personal:</p>
+                <ul>
+                    <li>Derecho a acceder a su información personal</li>
+                    <li>Derecho a rectificar información inexacta</li>
+                    <li>Derecho a eliminar su información personal</li>
+                    <li>Derecho a la portabilidad de datos</li>
+                    <li>Derecho a oponerse al procesamiento</li>
+                    <li>Derecho a retirar el consentimiento</li>
+                </ul>
             </section>
 
             <section class="terms-section">
-                <h2 data-i18n="privacy.contact.title">11. Contact Us</h2>
-                <p data-i18n="privacy.contact.content">If you have any questions about this privacy policy or our privacy practices, please contact us at:</p>
+                <h2>8. Retención de Datos</h2>
+                <p>Conservamos su información personal solo durante el tiempo necesario para cumplir con los propósitos descritos en esta política de privacidad, a menos que un período de retención más largo sea requerido o permitido por ley.</p>
+            </section>
+
+            <section class="terms-section">
+                <h2>9. Privacidad de los Menores</h2>
+                <p>Nuestros servicios no están dirigidos a menores de 13 años. No recopilamos intencionalmente información personal de menores de 13 años. Si usted es padre o tutor y cree que su hijo nos ha proporcionado información personal, por favor contáctenos.</p>
+            </section>
+
+            <section class="terms-section">
+                <h2>10. Cambios a Esta Política de Privacidad</h2>
+                <p>Podemos actualizar esta política de privacidad de vez en cuando. Le notificaremos de cualquier cambio publicando la nueva política de privacidad en esta página y actualizando la fecha de "Última actualización". Su uso continuado de nuestros servicios después de cualquier modificación constituye la aceptación de la política de privacidad actualizada.</p>
+            </section>
+
+            <section class="terms-section">
+                <h2>11. Contáctenos</h2>
+                <p>Si tiene alguna pregunta sobre esta política de privacidad o nuestras prácticas de privacidad, por favor contáctenos en:</p>
                 <div class="contact-info">
-                    <p><strong data-i18n="privacy.contact.email">Email:</strong> privacy@inker.com</p>
-                    <p><strong data-i18n="privacy.contact.address">Address:</strong> 123 Tattoo Street, Ink City, IC 12345</p>
-                    <p><strong data-i18n="privacy.contact.phone">Phone:</strong> +1 (555) 123-4567</p>
+                    <p><strong>Correo electrónico:</strong> privacy@inker.com</p>
+                    <p><strong>Dirección:</strong> 123 Tattoo Street, Ink City, IC 12345</p>
+                    <p><strong>Teléfono:</strong> +1 (555) 123-4567</p>
                 </div>
             </section>
         </div>
